--- a/index.html
+++ b/index.html
@@ -16,8 +16,21 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu anbiente.</p>
+                <br>
                 <form action="login.php" method="post">
-                    
+                    <div class="campo">
+                         <input type="email" name="login" id="ilogin" placeholder=" seu email" autocomplete="email" required maxlength="30">
+                         <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <br>
+                    <input type="submit" value="Entra">
+                    <a href="esqueci.html">
+                        Esqueci a senha
+                    </a>
                 </form>
             </div>
         </section>
